<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.5">
  <DUT Name="NCI_REF" Id="{a7648395-f440-42f7-afeb-c5b09a98dc39}">
    <Declaration><![CDATA[TYPE NCI_REF :
STRUCT
	NCTOPLC_nciref AT %I* : NCTOPLC_NCICHANNEL_REF;
	PLCTONC_nciref AT %Q* : PLCTONC_NCICHANNEL_REF;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>